Name:           language-pike
Version:        0.1
Author:         Henning Günther
Cabal-Version:  >=1.10
Build-Type:     Simple

Library
  Build-Depends:        base>=4,array,mtl,pretty,bytestring,containers
  Hs-Source-Dirs:       lib
  Exposed-Modules:
    Language.Pike.Tokens
    Language.Pike.Lexer
    Language.Pike.Syntax
    Language.Pike.Parser
    Language.Pike.Compiler
    Language.Pike.Compiler.Stack
    Language.Pike.Compiler.Error
    Language.Pike.Compiler.Resolver
    Language.Pike.Compiler.Monad

    Llvm
    Llvm.AbsSyn
    Llvm.PpLlvm
    Llvm.Types

Executable hike
  Build-Depends:       language-pike,process,filepath,base,bytestring
  Hs-Source-Dirs:      bin
  Main-Is:             Main.hs
  Cpp-Options:         -DVERSION=0.1

